add java debugging